Update install scripts