@@ -1,11 +1,7 @@
 #!/bin/bash
 
-ANT_VERSION=1.9.6
-JDK_VERSION=8u74-b02
-TOMCAT_VERSION=8.0.32
-REDIS_VERSION=3.0.7
-#JDK_VERSION=7u80-b15
-#TOMCAT_VERSION=7.0.68
+ANT_VERSION=1.10.1
+TOMCAT_VERSION=8.0.41
 
 #must run with sudo
 if [ ! -n "$SUDO_USER" ];then
@@ -40,22 +36,7 @@ EOF
 
 
 #install packages
-yum -y install mysql-server subversion git nginx chkconfig zip unzip wget make gcc telnet
-
-#install oracle jdk
-if [ ! -d jdk ];then
-if ! $(ls -l jdk-*linux-x64.tar.gz >/dev/null 2>&1) ; then
-wget --no-cookies --no-check-certificate --header "Cookie: oraclelicense=accept-securebackup-cookie" "http://download.oracle.com/otn-pub/java/jdk/$JDK_VERSION/jdk-${JDK_VERSION:0:-4}-linux-x64.tar.gz"
-fi
-tar xf jdk-*.tar.gz
-rm jdk-*.tar.gz
-mv jdk* jdk
-chown -R $USER:$USER jdk
-echo JAVA_HOME=\"/home/$USER/jdk\" >> /etc/environment
-env JAVA_HOME=\"/home/$USER/jdk\"
-ln -s /home/$USER/jdk/bin/java /usr/bin/java
-ln -s /home/$USER/jdk/bin/javac /usr/bin/javac
-fi
+yum -y install java-1.8.0-openjdk-devel mysql-server subversion git nginx chkconfig zip unzip wget make gcc telnet
 
 
 #install ant
@@ -88,24 +69,6 @@ cd tomcat && rm -rf bin/*.bat && rm -rf webapps/*
 cd conf
 sed -i  's/\s[3-4][a-x-]*manager.org.apache.juli.FileHandler,//g' logging.properties
 sed -i '/manager/d' logging.properties
-if [ "${TOMCAT_VERSION:0:1}" = "7" ];then
-sed -i 's/tomcat7-websocket/*/g' catalina.properties
-sed -i '/ContextConfig.jarsToSkip/d' catalina.properties
-cat>>catalina.properties<<EOF
-org.apache.catalina.startup.ContextConfig.jarsToSkip=\\
-activiti-*.jar,antlr-*.jar,aopalliance-*.jar,aspectj*.jar,bonecp-*.jar,commons-*.jar,\\
-curator-*.jar,dom4j-*.jar,dynamicreports-*.jar,eaxy-*.jar,ehcache-*.jar,\\
-elasticsearch-*.jar,freemarker-*.jar,guava-*.jar,hessian-*.jar,hibernate-*.jar,\\
-http*.jar,itext*.jar, jackson-*.jar,jasperreports-*.jar,javamail-*.jar,\\
-javassist-*.jar,jboss-logging-*.jar,jedis-*.jar, jericho-*.jar,joda-*.jar,jpa-*.jar,\\
-jsoup-*.jar,jta-*.jar,log4j-*.jar,lucene-*.jar,mmseg4j-*.jar,\\
-mongo-java-driver-*.jar,mvel2-*.jar,mybatis-*.jar,mysql-*.jar,ognl-*.jar,pinyin4j-*.jar,\\
-poi-*.jar,rabbitmq-*.jar,sitemesh-*.jar,slf4j-*.jar,spring-*.jar,struts2-*.jar,\\
-xmemcached-*.jar,xwork-*.jar,zookeeper-*.jar,zxing-*.jar,\\
-ojdbc*.jar,sqljdbc*.jar,postgresql-*.jar,db2*.jar,jconn*.jar,h2-*.jar,hsqldb-*.jar,\\
-ifxjdbc*.jar,derbyclient*.jar,rhino*.jar
-EOF
-else
 sed -i '108,$d' catalina.properties
 cat>>catalina.properties<<EOF
 tomcat.util.scan.StandardJarScanFilter.jarsToSkip=\\
@@ -156,7 +119,6 @@ tomcat.util.buf.StringCache.byte.enabled=true
 #tomcat.util.buf.StringCache.trainThreshold=500000
 #tomcat.util.buf.StringCache.cacheSize=5000
 EOF
-fi
 cat>server.xml<<EOF
 <?xml version="1.0" encoding="utf-8"?>
 <Server port="\${port.shutdown}" shutdown="SHUTDOWN">
@@ -172,11 +134,7 @@ EOF
 cd ..
 cd ..
 sed -i '99i export SPRING_PROFILES_DEFAULT=dual' tomcat/bin/catalina.sh
-if [ "${JDK_VERSION:0:1}" = "7" ];then
-sed -i '99i CATALINA_OPTS="-server -Xms128m -Xmx1024m -Xmn80m -Xss256k -XX:PermSize=128m -XX:MaxPermSize=512m -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+UseCMSCompactAtFullCollection -XX:+UseParNewGC -XX:CMSMaxAbortablePrecleanTime=5 -Djava.awt.headless=true"' tomcat/bin/catalina.sh
-else
 sed -i '99i CATALINA_OPTS="-server -Xms128m -Xmx1024m -Xmn80m -Xss256k -XX:+DisableExplicitGC -XX:+UseG1GC -XX:SurvivorRatio=6 -XX:MaxGCPauseMillis=400 -XX:G1ReservePercent=15 -XX:InitiatingHeapOccupancyPercent=40 -Djava.awt.headless=true"' tomcat/bin/catalina.sh
-fi
 mv tomcat tomcat8080
 cp -R tomcat8080 tomcat8081
 sed -i '99i CATALINA_PID="/tmp/tomcat8080_pid"' tomcat8080/bin/catalina.sh
@@ -597,7 +555,7 @@ fi
 
 #install redis
 if ! which redis-server > /dev/null && ! $(ls -l redis-*.tar.gz >/dev/null 2>&1) ; then
-wget http://download.redis.io/releases/redis-$REDIS_VERSION.tar.gz
+wget http://download.redis.io/redis-stable.tar.gz
 fi
 if $(ls -l redis-*.tar.gz >/dev/null 2>&1) ; then
 tar xf redis-*.tar.gz >/dev/null && rm -rf redis-*.tar.gz
